--- a/estatevintage.html
+++ b/estatevintage.html
@@ -99,7 +99,7 @@
 
       <div class="five wide column">
         <div class="ui list">
-          <a class="item" href="estatevintage.html">&nbsp;&nbsp;<b>Estate & Vintage</b></a>
+          <a class="item light-blue" href="estatevintage.html">&nbsp;&nbsp;<b>Estate & Vintage</b></a>
           <a class="item" href="local.html">Local Artists</a>
           <a class="item" href="worldwide.html">Worldwide Artists</a>
           <a class="item" href="bracelets.html">Bracelets</a>
