--- a/favorites.html
+++ b/favorites.html
@@ -105,7 +105,7 @@
           <a class="item" href="bracelets.html">Bracelets</a>
           <a class="item" href="scarves.html">Scarves</a>
           <a class="item" href="necklaces.html">Necklaces & Pendants</a>
-          <a class="item" href="favorites.html">&nbsp;&nbsp;<b>Linda's Favorites</b></a>
+          <a class="item light-blue" href="favorites.html">&nbsp;&nbsp;<b>Linda's Favorites</b></a>
           <a class="item" href="deals.html">Deals</a>
         </div>
 
