--- a/local.html
+++ b/local.html
@@ -100,7 +100,7 @@
       <div class="five wide column">
         <div class="ui list">
           <a class="item" href="estatevintage.html">Estate & Vintage</a>
-          <a class="item" href="local.html">&nbsp;&nbsp;<b>Local Artists</b></a>
+          <a class="item light-blue" href="local.html">&nbsp;&nbsp;<b>Local Artists</b></a>
           <a class="item" href="worldwide.html">Worldwide Artists</a>
           <a class="item" href="bracelets.html">Bracelets</a>
           <a class="item" href="scarves.html">Scarves</a>
