--- a/worldwide.html
+++ b/worldwide.html
@@ -101,7 +101,7 @@
         <div class="ui list">
           <a class="item" href="estatevintage.html">Estate & Vintage</a>
           <a class="item" href="local.html">Local Artists</a>
-          <a class="item" href="worldwide.html">&nbsp;&nbsp;<b>Worldwide Artists</b></a>
+          <a class="item light-blue" href="worldwide.html">&nbsp;&nbsp;<b>Worldwide Artists</b></a>
           <a class="item" href="bracelets.html">Bracelets</a>
           <a class="item" href="scarves.html">Scarves</a>
           <a class="item" href="necklaces.html">Necklaces & Pendants</a>
