--- a/bracelets.html
+++ b/bracelets.html
@@ -102,7 +102,7 @@
           <a class="item" href="estatevintage.html">Estate & Vintage</a>
           <a class="item" href="local.html">Local Artists</a>
           <a class="item" href="worldwide.html">Worldwide Artists</a>
-          <a class="item" href="bracelets.html">&nbsp;&nbsp;<b>Bracelets</b></a>
+          <a class="item light-blue" href="bracelets.html">&nbsp;&nbsp;<b>Bracelets</b></a>
           <a class="item" href="scarves.html">Scarves</a>
           <a class="item" href="necklaces.html">Necklaces & Pendants</a>
           <a class="item" href="favorites.html">Linda's Favorites</a>
