--- a/deals.html
+++ b/deals.html
@@ -106,7 +106,7 @@
           <a class="item" href="scarves.html">Scarves</a>
           <a class="item" href="necklaces.html">Necklaces & Pendants</a>
           <a class="item" href="favorites.html">Linda's Favorites</a>
-          <a class="item" href="deals.html">&nbsp;&nbsp;<b>Deals</b></a>
+          <a class="item light-blue" href="deals.html">&nbsp;&nbsp;<b>Deals</b></a>
         </div>
 
         <div class="ui simple fluid dropdown">
