--- a/necklaces.html
+++ b/necklaces.html
@@ -104,7 +104,7 @@
           <a class="item" href="worldwide.html">Worldwide Artists</a>
           <a class="item" href="bracelets.html">Bracelets</a>
           <a class="item" href="scarves.html">Scarves</a>
-          <a class="item" href="necklaces.html">&nbsp;&nbsp;<b>Necklaces & Pendants</b></a>
+          <a class="item light-blue" href="necklaces.html">&nbsp;&nbsp;<b>Necklaces & Pendants</b></a>
           <a class="item" href="favorites.html">Linda's Favorites</a>
           <a class="item" href="deals.html">Deals</a>
         </div>
