--- a/scarves.html
+++ b/scarves.html
@@ -103,7 +103,7 @@
           <a class="item" href="local.html">Local Artists</a>
           <a class="item" href="worldwide.html">Worldwide Artists</a>
           <a class="item" href="bracelets.html">Bracelets</a>
-          <a class="item" href="scarves.html">&nbsp;&nbsp;<b>Scarves</b></a>
+          <a class="item light-blue" href="scarves.html">&nbsp;&nbsp;<b>Scarves</b></a>
           <a class="item" href="necklaces.html">Necklaces & Pendants</a>
           <a class="item" href="favorites.html">Linda's Favorites</a>
           <a class="item" href="deals.html">Deals</a>
