--- a/estatevintage.html
+++ b/estatevintage.html
@@ -123,7 +123,7 @@
 
       <div class="eleven wide column">
     
-        <div class="ui two column grid center aligned">
+        <div id="productGrid">
 
           <!-- Row 1 -->
           <div class="column">
@@ -294,43 +294,8 @@
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.js'></script>
-  <script>
-    $(function() {
-      $('#show-sidebar').click(function() {
-        $('.menu.sidebar').sidebar('toggle');
-      });
-
-      $('#hide-sidebar').click(function() {
-        $('.menu.sidebar').sidebar('toggle');
-      });
-    });
-
-    $(document).ready(function(){
-      $("#item1").click(function(){
-        $('.ui.modal.item1').modal('show');
-      });
-
-      $("#item2").click(function(){
-        $('.ui.modal.item2').modal('show');
-      });
-
-      $("#item3").click(function(){
-        $('.ui.modal.item3').modal('show');
-      });
-    
-      $("#item4").click(function(){
-        $('.ui.modal.item4').modal('show');
-      });
-
-      $("#item5").click(function(){
-        $('.ui.modal.item5').modal('show');
-      });
-
-      $("#item6").click(function(){
-        $('.ui.modal.item6').modal('show');
-      });
-    });
-  </script>
+  <script src='app.js'></script>
+  
 
 </body>
 </html>
