--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.js'></script>
+  <script src='app.js' /></script>
   <script>
     $(function() {
       $('#show-sidebar').click(function() {
