Updated E&V page with product data, added dropdowns

--- a/faq.html
+++ b/faq.html
@@ -85,6 +85,17 @@
   
     <div class="ui segments">
       <div class="ui segment">
+        <p>What is the difference between estate, vintage, and antique jewelry?</p>
+      </div>
+      <div class="ui secondary segment">
+        <p><b>Estate</b> jewelry is pre-owned and often purchased at an estate sale.</p>
+        <p><b>Vintage</b> is technically jewelry that is 50 years old or more, but the term is often used to describe any pre-owned jewelry.</p>
+        <p><b>Antique</b> jewelry describes any jewelry that is over 100 years old.</p>
+      </div>
+    </div>
+
+    <div class="ui segments">
+      <div class="ui segment">
         <p>Does Jewels By The Sea create custom jewelry?</p>
       </div>
       <div class="ui secondary segment">
