--- a/estatevintage.html
+++ b/estatevintage.html
@@ -12,40 +12,24 @@
 
   <title>Jewels By The Sea</title>
 
-  <script src="classie.js"></script>
-  <script>
-      function init() {
-          window.addEventListener('scroll', function(e){
-              var distanceY = window.pageYOffset || document.documentElement.scrollTop,
-                  shrinkOn = 250,
-                  header = document.querySelector("header");
-              if (distanceY > shrinkOn) {
-                  classie.add(header,"smaller");
-              } else {
-                  if (classie.has(header,"smaller")) {
-                      classie.remove(header,"smaller");
-                  }
-              }
-          });
-      }
-      window.onload = init();
-  </script>
+
 </head>
 
 <body>
 
   <script>
-
     $('#show-sidebar').click(function() {
       $('.ui.sidebar')
         .sidebar('setting', 'transition', 'overlay')
         .sidebar('toggle')
         .sidebar('attach events', '.ui.sidebar', 'show');
     });
+
+</script>
   </script>
 
 <div class="ui left inverted vertical menu sidebar">
-  <div class="item">
+  <div class="item menu-opener">
     <div id="hide-sidebar" class="button">
       <i class="sidebar icon"></i>
     </div>
@@ -75,9 +59,11 @@
   <div id="logo">
     <a href="index.html"><img src="images/logo.png" /></a>
   </div>
+  <!--
   <div id="toggle-view">
     <i class="list layout icon"></i> VIEW
   </div>
+  -->
 </header>
 
 
@@ -85,31 +71,23 @@
   <!-- Main Content -->
   <div class="ui main container">
     <h1 class="script">Estate & Vintage</h1> 
-    <p><i>Description of Estate & Vintage</i></p>   
+    <p>... <i>The present with a past and future.</i></p>   
     <div class="ui stackable grid">
 
       <div class="five wide column">
-        <div class="ui list">
-          <a class="item light-blue" href="estatevintage.html">&nbsp;&nbsp;<b>Estate & Vintage</b></a>
-          <a class="item" href="local.html">Local Artists</a>
-          <a class="item" href="worldwide.html">Worldwide Artists</a>
-          <a class="item" href="bracelets.html">Bracelets</a>
-          <a class="item" href="scarves.html">Scarves</a>
-          <a class="item" href="necklaces.html">Necklaces & Pendants</a>
-          <a class="item" href="favorites.html">Linda's Favorites</a>
-          <a class="item" href="deals.html">Deals</a>
-        </div>
-
-        <div class="ui simple fluid dropdown">
-          <div class="text">REFINE</div>
+        <p>REFINE PRODUCTS</p>
+        <div class="ui selection dropdown">
+          <input type="hidden" name="refine">
           <i class="dropdown icon"></i>
+          <div class="default text">Newest</div>
           <div class="menu">
-            <div class="active item">Newest&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
-            <div class="item">Name</div>
-            <div class="item">Price</div>
+            <div class="item" data-value="2">Newest</div>
+            <div class="item" data-value="1">Name</div>
+            <div class="item" data-value="0">Price</div>
           </div>
         </div>
       </div>
+  
 
 
       <div class="eleven wide column">
@@ -120,10 +98,10 @@
           <div class="column">
             <div id="item1" class="ui card">
               <div class="image">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/estatevintage/1-thumb.png">
               </div>
               <div class="content">
-                <a class="header">E&V 1</a>
+                <a class="header">ART NOUVEAU STYLE CUFF</a>
               </div>
             </div>
           </div>
@@ -131,10 +109,10 @@
           <div class="column">
             <div id="item2" class="ui card">
               <div class="image">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/estatevintage/2-thumb.png">
               </div>
               <div class="content">
-                <a class="header">E&V 2</a>
+                <a class="header">ONYX & MARCASITE RING</a>
               </div>
             </div>
           </div>
@@ -142,10 +120,10 @@
           <div class="column">
             <div id="item3" class="ui card">
               <div class="image">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/estatevintage/3-thumb.png">
               </div>
               <div class="content">
-                <a class="header">E&V 3</a>
+                <a class="header">HOBE GOLD-TONE BRACELET</a>
               </div>
             </div>
           </div>
@@ -153,22 +131,21 @@
           <div class="column">
             <div id="item4" class="ui card">
               <div class="image">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/estatevintage/4-thumb.png">
               </div>
               <div class="content">
-                <a class="header">E&V 4</a>
+                <a class="header">LAVALIER CHAIN</a>
               </div>
             </div>
           </div>
 
-          <!-- Row 2 -->
           <div class="column">
             <div id="item5" class="ui card">
               <div class="image">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/estatevintage/5-thumb.png">
               </div>
               <div class="content">
-                <a class="header">E&V 5</a>
+                <a class="header">SIGNED COPPER NECKLACE</a>
               </div>
             </div>
           </div>
@@ -176,15 +153,71 @@
           <div class="column">
             <div id="item6" class="ui card">
               <div class="image">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/estatevintage/6-thumb.png">
               </div>
               <div class="content">
-                <a class="header">E&V 6</a>
+                <a class="header">SAPPHIRE RING</a>
               </div>
             </div>
           </div>
 
+          <div class="column">
+            <div id="item7" class="ui card">
+              <div class="image">
+                <img src="images/estatevintage/7-thumb.png">
+              </div>
+              <div class="content">
+                <a class="header">SHORT NECKLACE</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div id="item8" class="ui card">
+              <div class="image">
+                <img src="images/estatevintage/8-thumb.png">
+              </div>
+              <div class="content">
+                <a class="header">SILVER EARRINGS</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div id="item9" class="ui card">
+              <div class="image">
+                <img src="images/estatevintage/9-thumb.png">
+              </div>
+              <div class="content">
+                <a class="header">PAINTED BUTTONS</a>
+              </div>
+            </div>
+          </div>
         </div>
+
+        <div class="ui centered grid">
+          <div class="sixteen wide column">
+            <p>VIEW CATEGORY</p>
+            <div class="ui selection dropdown bottom-grid-links">
+              <input type="hidden" name="refine">
+              <i class="dropdown icon"></i>
+              <div class="default text">Estate & Vintage</div>
+              <div class="menu">
+                <!--<div class="item"><a class="" href="#">Estate & Vintage</a></div>-->
+                <div class="item"><a class="" href="local.html">Local Artists</a></div>
+                <div class="item"><a class="" href="worldwide.html">Worldwide Artists</a></div>
+                <div class="item"><a class="" href="earrings.html">Earrings</a></div>
+                <div class="item"><a class="" href="bracelets.html">Bracelets</a></div>
+                <div class="item"><a class="" href="scarves.html">Scarves</a></div>
+                <div class="item"><a class="" href="necklaces.html">Necklaces & Pendants</a></div>
+                <div class="item"><a class="" href="favorites.html">Linda's Favorites</a></div>
+                <div class="item"><a class="" href="deals.html">Deals</a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
       </div>
       
     </div>
@@ -194,10 +227,10 @@
 <div class="ui modal item1">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui image" src="images/favorites/1-full.png">
+    <img class="ui image" src="images/estatevintage/1-full.png">
     <div class="item-desc">
-      <p class="item-title">Sterling Silver Art Nouveau Cuff</p>
-      <p class="item-subtitle">Circa 1960</p>
+      <p class="item-title">Sterling Silver Art Nouveau Design Cuff</p>
+      <p class="item-subtitle">Circa 1960.</p>
       <p class="item-price">$299.00</p>
       <button class="ui blue button">Inquire</button>
     </div>
@@ -206,15 +239,12 @@
 
 <div class="ui modal item2">
   <i class="close icon"></i>
-  <div class="header">
-    Cuff
-  </div>
   <div class="content">
-    <img class="ui image" src="images/favorites/1-full.png">
-    <div class="ui center aligned">
-      <p class="ui center aligned">Sterling Silver Art Nouveau Cuff</p>
-      <p>Circa 1960</p>
-      <p>$299.00</p>
+    <img class="ui image" src="images/estatevintage/2-full.png">
+    <div class="item-desc">
+      <p class="item-title">Onyx & Marcasite Ring</p>
+      <p class="item-subtitle">Sterling silver onyx and marcasite ring. Circa 1970</p>
+      <p class="item-price">$299.00</p>
       <button class="ui blue button">Inquire</button>
     </div>
  </div>
@@ -222,14 +252,12 @@
 
 <div class="ui modal item3">
   <i class="close icon"></i>
-  <div class="header">
-    Cuff
-  </div>
   <div class="content">
-    <img class="ui image" src="images/favorites/1-full.png">
-    <div class="ui center aligned">
-      <p>Sterling Silver Art Nouveau Cuff</p>
-      <p>$299.00</p>
+    <img class="ui image" src="images/estatevintage/3-full.png">
+    <div class="item-desc">
+      <p class="item-title">'Hobe' Gold-Tone Bracelet</p>
+      <p class="item-subtitle">Signed 'Hobe' gold tone and crystal bracelet Circa 1950.</p>
+      <p class="item-price">$129.00</p>
       <button class="ui blue button">Inquire</button>
     </div>
  </div>
@@ -237,14 +265,12 @@
 
 <div class="ui modal item4">
   <i class="close icon"></i>
-  <div class="header">
-    Cuff
-  </div>
   <div class="content">
-    <img class="ui image" src="images/favorites/1-full.png">
-    <div class="ui center aligned">
-      <p>Sterling Silver Art Nouveau Cuff</p>
-      <p>$299.00</p>
+    <img class="ui image" src="images/estatevintage/4-full.png">
+    <div class="item-desc">
+      <p class="item-title">10 Karat Yellow Gold Lavalier Chain</p>
+      <p class="item-subtitle">With seed pearl and synthetic spinel on a gold filled chain. Circa 1920.</p>
+      <p class="item-price">$229.00</p>
       <button class="ui blue button">Inquire</button>
     </div>
  </div>
@@ -252,14 +278,12 @@
 
 <div class="ui modal item5">
   <i class="close icon"></i>
-  <div class="header">
-    Cuff
-  </div>
   <div class="content">
-    <img class="ui image" src="images/favorites/1-full.png">
-    <div class="ui center aligned">
-      <p>Sterling Silver Art Nouveau Cuff</p>
-      <p>$299.00</p>
+    <img class="ui image" src="images/estatevintage/5-full.png">
+    <div class="item-desc">
+      <p class="item-title">Signed Renoir of California Copper Necklace</p>
+      <p class="item-subtitle">Circa 1960.</p>
+      <p class="item-price">$129.00</p>
       <button class="ui blue button">Inquire</button>
     </div>
  </div>
@@ -267,26 +291,102 @@
 
 <div class="ui modal item6">
   <i class="close icon"></i>
-  <div class="header">
-    Cuff
-  </div>
   <div class="content">
-    <img class="ui image" src="images/favorites/1-full.png">
-    <div class="ui center aligned">
-      <p>Sterling Silver Art Nouveau Cuff</p>
-      <p>$299.00</p>
+    <img class="ui image" src="images/estatevintage/6-full.png">
+    <div class="item-desc">
+      <p class="item-title">18 Karat Yellow Gold Art Deco Sapphire Ring</p>
+      <p class="item-subtitle">Circa 1920.</p>
+      <p class="item-price">$1,119.00</p>
+      <button class="ui blue button">Inquire</button>
+    </div>
+ </div>
+</div>
+
+<div class="ui modal item7">
+  <i class="close icon"></i>
+  <div class="content">
+    <img class="ui image" src="images/estatevintage/7-full.png">
+    <div class="item-desc">
+      <p class="item-title">Four Strand Adjustable Short Necklace</p>
+      <p class="item-subtitle">Circa 1950.</p>
+      <p class="item-price">$49.00</p>
       <button class="ui blue button">Inquire</button>
     </div>
  </div>
 </div>
 
 
-  <ng-include src="'partials/footer.html'"></ng-include>
+<div class="ui modal item8">
+  <i class="close icon"></i>
+  <div class="content">
+    <img class="ui image" src="images/estatevintage/8-full.png">
+    <div class="item-desc">
+      <p class="item-title">Sterling Silver Lapis Earrings</p>
+      <p class="item-subtitle">Circa 1970.</p>
+      <p class="item-price">$39.00</p>
+      <button class="ui blue button">Inquire</button>
+    </div>
+ </div>
+</div>
 
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script src='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.js'></script>
-  <script src='app.js'></script>
-  
+<div class="ui modal item9">
+  <i class="close icon"></i>
+  <div class="content">
+    <img class="ui image" src="images/estatevintage/9-full.png">
+    <div class="item-desc">
+      <p class="item-title">Hand Painted Buttons</p>
+      <p class="item-subtitle">Set of 6. Circa 1960.</p>
+      <p class="item-price">$39.00</p>
+      <button class="ui blue button">Inquire</button>
+    </div>
+ </div>
+</div>
+
+<a href="#0" id="toTop"><i class="chevron up icon"></i> <br />Back to Top</a>
+
+<ng-include src="'partials/footer.html'"></ng-include>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src="classie.js"></script>
+<script src='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.js'></script>
+<script src='app.js'></script>
+<script src='js/product_display.js'></script>
+<script>
+      function init() {
+        var distanceY = window.pageYOffset,
+            shrinkOn = 200,
+            header = document.querySelector("header"),
+            toTop = document.getElementById("toTop");
+
+        /*
+        window.addEventListener('scroll', function(e){
+          console.log(distanceY);
+          if (distanceY > shrinkOn) {
+              console.log('YEAH');
+              classie.add(header,"smaller");
+              classie.add(toTop, "show");
+          } else {
+              console.log('NOPE');
+              if (classie.has(header,"smaller")) {
+                  classie.remove(header,"smaller");
+              }
+              if( classie.has(toTop,"show")) {
+                classie.remove(toTop, "show");
+              }
+          }
+        });
+        */
+
+        //smooth scroll to top
+        $(toTop).on('click', function(event){
+          event.preventDefault();
+          $('body,html').animate({
+            scrollTop: 0 ,
+            }, 700
+          );
+        });
+      }
+      window.onload = init();
+  </script>
 
 </body>
 </html>
