--- a/faq.html
+++ b/faq.html
@@ -99,7 +99,16 @@
         <p>Does Jewels By The Sea create custom jewelry?</p>
       </div>
       <div class="ui secondary segment">
-        <p>Yes &mdash; with my Graduate Jeweler status and over 3 years in the jewelry business, I LOVE to help people create that unique and wonderful piece of jewelry just for you. I have custom designed wedding sets, right hand rings, pendants, bracelets, earrings, and fasion jewelry for many of my clients throughout the years. It gives me great joy to help you create a unique piece of jewelry that will become an heirloom for generations to come.</p>
+        <p><b>Yes</b> &mdash; with my Graduate Jeweler status and over 3 years in the jewelry business, I LOVE to help people create that unique and wonderful piece of jewelry just for you. I have custom designed wedding sets, right hand rings, pendants, bracelets, earrings, and fashion jewelry for many of my clients throughout the years. It gives me great joy to help you create a unique piece of jewelry that will become an heirloom for generations to come.</p>
+      </div>
+    </div>
+
+    <div class="ui segments">
+      <div class="ui segment">
+        <p>Does Jewels By The Sea do jewelry repair?</p>
+      </div>
+      <div class="ui secondary segment">
+        <p><b>Yes</b> &mdash; I am personally acquainted with a jewelry repair expert who has been in the business for [BLANK] years.</p>
       </div>
     </div>
 
@@ -108,7 +117,8 @@
         <p>What is a Graduate Gemologist?</p>
       </div>
       <div class="ui secondary segment">
-        <p>GIA, or the Gemological Institute of America, is the training authority in the American jewelry industry. To earn a Graduate Gemologist degree from the GIA, you must invest a substantial amount of time and money to complete and pass five course studies and three lab classes, and then pass a comprehensive final exam. Following are the 8 requirements: Diamond Essentials, Diamonds and Diamond Grading, Colored Stone Essentials, Colored Stones, Gem Identification, and Lab Classes: Diamond Grading Lab, Colored Stone Grading Lab, Gem Identification Lab. The most prestigious credential in the industry, the GIA Graduate Gemologist program gives a person the compregensive knowledge of diamonds and colored stones one needs to succeed anywhere in the industry.</p>
+        <p>GIA, or the <a href="http://www.gia.edu/">Gemological Institute of America</a>, is <i>the</i> training authority in the American jewelry industry. To earn a Graduate Gemologist degree from the GIA, you must invest a substantial amount of work to complete and pass five course studies and three lab classes, and then pass a comprehensive final exam.</p>
+        <p>There are 8 requirements of study, including Diamonds and Diamond Grading, Colored Stone Essentials, Gem Identification, and various grading and identification labs. The most prestigious credential in the industry, the GIA Graduate Gemologist program gives a person the compregensive knowledge of diamonds and colored stones one needs to succeed anywhere in the industry.</p>
       </div>
     </div>
 
