--- a/visit.html
+++ b/visit.html
@@ -102,7 +102,7 @@
           </div>
         </div>
 
-        <div class="ui basic segment">
+        <div class="ui basic segment center aligned">
           <p>I am in the store later than 6pm on most nights, and I am happy to set up an appointment with you at any mutually agreeable time - just give call!</p>
         </div>
       </div>
