Edited thumbnails for E&V to be square. Styled the refining dropdowns

--- a/estatevintage.html
+++ b/estatevintage.html
@@ -75,7 +75,7 @@
     <div class="ui stackable grid">
 
       <div class="five wide column">
-        <p>REFINE PRODUCTS</p>
+        <p class="dropdown-label">REFINE PRODUCTS</p>
         <div class="ui selection dropdown">
           <input type="hidden" name="refine">
           <i class="dropdown icon"></i>
@@ -197,7 +197,7 @@
 
         <div class="ui centered grid">
           <div class="sixteen wide column">
-            <p>VIEW CATEGORY</p>
+            <p class="dropdown-label">VIEW CATEGORY</p>
             <div class="ui selection dropdown bottom-grid-links">
               <input type="hidden" name="refine">
               <i class="dropdown icon"></i>
@@ -216,12 +216,8 @@
             </div>
           </div>
         </div>
-
-
       </div>
-      
     </div>
-
   </div>
 
 <div class="ui modal item1">
