--- a/index.html
+++ b/index.html
@@ -52,20 +52,7 @@
         .sidebar('attach events', '.ui.sidebar', 'show');
     });
   </script>
-<!--
-  <header>
-    <div class="navlinks">
-      <div id="logo"><a href="/"><img class="header-img" src="images/logo.png" /></a></div>
-      <div class="nav-container">
-        <a href="index.html" class="item navlink">Home</a>
-        <a href="about.html" class="active item navlink">About</a>
-        <a href="visit.html" class="item navlink">Visit</a>
-        <a href="index.html#products" class="item navlink">Products</a>
-        <a href="faq.html" class="item navlink">FAQ</a>
-      </div>
-    </div>
-  </header>
--->
+
 <div class="ui left inverted vertical menu sidebar">
   <div class="item">
     <div id="hide-sidebar" class="button">
@@ -108,17 +95,19 @@
     <div class="ui stackable grid">
       <div class="eleven wide column">
 
-        <div class="ui two column grid center aligned">
+        <div id="productGrid">
           <!-- Row 1 -->
           <div class="column">
+
             <div class="ui card">
               <a class="image" href="estatevintage.html">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/estatevintage/1-thumb.png">
               </a>
               <div class="content item-main">
                 <a class="header item-header" href="estatevintage.html">Estate & Vintage</a>
               </div>
             </div>
+
           </div>
 
           <div class="column">
@@ -126,7 +115,7 @@
               <a class="image" href="local.html">
                 <img src="images/favorites/1-thumb.png">
               </a>
-              <div class="content">
+              <div class="content item-main">
                 <a class="header" href="local.html">Local Artists</a>
               </div>
             </div>
@@ -137,7 +126,7 @@
               <a class="image" href="worldwide.html">
                 <img src="images/favorites/1-thumb.png">
               </a>
-              <div class="content">
+              <div class="content item-main">
                 <a class="header" href="worldwide.html">Worldwide Artists</a>
               </div>
             </div>
@@ -148,7 +137,7 @@
               <a class="image" href="earrings.html">
                 <img src="images/favorites/1-thumb.png">
               </a>
-              <div class="content">
+              <div class="content item-main">
                 <a class="header" href="earrings.html">Earrings</a>
               </div>
             </div>
@@ -160,7 +149,7 @@
               <a class="image" href="favorites.html">
                 <img src="images/favorites/1-thumb.png">
               </a>
-              <div class="content">
+              <div class="content item-main">
                 <a class="header" href="favorites.html">Linda's Favorites</a>
               </div>
             </div>
@@ -171,7 +160,7 @@
               <a class="image" href="bracelets.html">
                 <img src="images/favorites/1-thumb.png">
               </a>
-              <div class="content">
+              <div class="content item-main">
                 <a class="header" href="bracelets.html">Bracelets</a>
               </div>
             </div>
@@ -183,7 +172,7 @@
               <a class="image" href="scarves.html">
                 <img src="images/favorites/1-thumb.png">
               </a>
-              <div class="content">
+              <div class="content item-main">
                 <a class="header" href="scarves.html">Scarves</a>
               </div>
             </div>
@@ -194,7 +183,7 @@
               <a class="image" href="necklaces.html">
                 <img src="images/favorites/1-thumb.png">
               </a>
-              <div class="content">
+              <div class="content item-main">
                 <a class="header" href="necklaces.html">Necklaces & Pendants</a>
               </div>
             </div>
@@ -205,7 +194,7 @@
               <a class="ui image" href-"deals.html">
                 <img src="images/favorites/1-thumb.png">
               </a>
-              <div class="content">
+              <div class="content item-main">
                 <a class="header" href="deals.html">Deals</a>
               </div>
             </div>
