Formatted the category descriptions for each

--- a/bracelets.html
+++ b/bracelets.html
@@ -94,7 +94,7 @@
   <!-- Main Content -->
   <div class="ui main container">
     <h1 class="script">Bracelets</h1> 
-    <p><i>Description of Bracelets</i></p>   
+    <p><i class="fa fa-quote-left fa-2x quote"></i><i>Bracelets can be simple to sassy to sparkly &mdash; a good way to accent any outfit!</i></p>   
     <div class="ui stackable grid">
 
       <div class="five wide column">
