--- a/deals.html
+++ b/deals.html
@@ -94,7 +94,7 @@
   <!-- Main Content -->
   <div class="ui main container">
     <h1 class="script">Deals</h1> 
-    <p><i>Description of Deals</i></p>   
+    <p><i><i class="fa fa-quote-left fa-2x quote"></i>One-of-a-kind items that you're guaranteed to love.</i></p>   
     <div class="ui stackable grid">
 
       <div class="five wide column">
