--- a/estatevintage.html
+++ b/estatevintage.html
@@ -71,7 +71,7 @@
   <!-- Main Content -->
   <div class="ui main container">
     <h1 class="script">Estate & Vintage</h1> 
-    <p>... <i>The present with a past and future.</i></p>   
+    <p><i class="fa fa-quote-left fa-2x quote"></i><i>Estate and Vintage jewelry offer you a present with both a past and future.</i></p>   
     <div class="ui stackable grid">
 
       <div class="five wide column">
