--- a/favorites.html
+++ b/favorites.html
@@ -94,7 +94,7 @@
   <!-- Main Content -->
   <div class="ui main container">
     <h1 class="script">Linda's Favorites</h1> 
-    <p><i>Description of Linda's Favorites</i></p>   
+    <p><i class="fa fa-quote-left fa-2x quote"></i><i>From fine to funky, these treasures are some of my personal favorites and make my mouth water!</i></p>   
     <div class="ui stackable grid">
 
       <div class="five wide column">
