--- a/local.html
+++ b/local.html
@@ -94,7 +94,7 @@
   <!-- Main Content -->
   <div class="ui main container">
     <h1 class="script">Local Artists</h1> 
-    <p><i>Description of Local Artists</i></p>   
+    <p><i class="fa fa-quote-left fa-2x quote"></i><i>Local artists create jewelry that is unique and makes a wonderful souvenir of a trip to La Jolla!</i></p>   
     <div class="ui stackable grid">
 
       <div class="five wide column">
