--- a/necklaces.html
+++ b/necklaces.html
@@ -94,7 +94,7 @@
   <!-- Main Content -->
   <div class="ui main container">
     <h1 class="script">Necklaces & Pendants</h1> 
-    <p><i>Description of Necklaces & Pendants</i></p>   
+    <p><i class="fa fa-quote-left fa-2x quote"></i><i>Necklaces and pendants are available in such a wide variety of styles that they can make a simple outfit just <b>pop</b>!</i></p>   
     <div class="ui stackable grid">
 
       <div class="five wide column">
