--- a/worldwide.html
+++ b/worldwide.html
@@ -94,7 +94,7 @@
   <!-- Main Content -->
   <div class="ui main container">
     <h1 class="script">Worldwide Artists</h1> 
-    <p><i>Description of Worldwide Artists</i></p>   
+    <p><i><i class="fa fa-quote-left fa-2x quote"></i>You don't have to go far to find pieces from around the world. Artist origins range from Brazil to Tanzania.</i></p>   
     <div class="ui stackable grid">
 
       <div class="five wide column">
