--- a/earrings.html
+++ b/earrings.html
@@ -93,8 +93,8 @@
 <div class="pusher">
   <!-- Main Content -->
   <div class="ui main container">
-    <h1 class="script">Estate & Vintage</h1> 
-    <p><i>Description of Estate & Vintage</i></p>   
+    <h1 class="script">Earrings</h1> 
+    <p><i class="fa fa-quote-left fa-2x quote"></i><i>Earrings are the mainstay of our jewelry wardrobe! Fun and unique earrings create the mood for an outfit.</i></p>   
     <div class="ui stackable grid">
 
       <div class="five wide column">
