--- a/scarves.html
+++ b/scarves.html
@@ -94,7 +94,7 @@
   <!-- Main Content -->
   <div class="ui main container">
     <h1 class="script">Bracelets</h1> 
-    <p><i>Description of Bracelets</i></p>   
+    <p><i class="fa fa-quote-left fa-2x quote"></i><i>Scarves are delightful for individual expression.</i></p>   
     <div class="ui stackable grid">
 
       <div class="five wide column">
