Minor formatting changes

--- a/about.html
+++ b/about.html
@@ -95,12 +95,12 @@
   <!-- Main Content -->
   <div class="ui main container">
     
-    <div class="ui basic center aligned segment">
+    <div class="ui basic segment">
       <img class="ui image center aligned" src="images/about.jpg" />
     </div>
 
     <div class="ui basic left aligned segment">
-      <p>Hi! My name is Linda Ronelle Jalving, and the unique boutique "Jewels by the Sea" is a result of my mid-life growth spurt (which started out as a crisis, but has been amended. :) ) .</p>
+      <p>Hi! My name is Linda Ronelle Jalving, and the unique boutique "Jewels by the Sea" is a result of my mid-life growth spurt (which started out as a crisis, but has since been amended).</p>
 
       <p>My boutique specializes in an eclectic mix of unique jewelry including local artists, estate, vintage, colored gems, diamond, gold, silver, copper and fashion jewelry. You'll also discover scarves, ornaments, and gifts with prices ranging from $5.00 to $5,000.00.</p>
 
