--- a/faq.html
+++ b/faq.html
@@ -127,7 +127,8 @@
         <p>Where does your jewelry come from?</p>
       </div>
       <div class="ui secondary segment">
-        <p>I hand pick every item in the store. I choose pieces from local artists, from artists from around the world, and from estate and vintage sales. Whenever I travel, I find artists from the area I am visiting and set up appointments to assess the possibility of adding another unique line to my inventory. Jewels By The Sea has jewelry from dozens of countries as well as La Jolla and San Diego artists. I also have a wide variety of price points ($5.00 - $5,000.) and a variety of styles to appeal to every client (at least that's my goal!)</p>
+        <p>I hand pick every item in the store. I choose pieces from local artists, from artists from around the world, and from estate and vintage sales. Whenever I travel, I find artists from the area I am visiting and set up appointments to assess the possibility of adding another unique line to my inventory. </p>
+        <p>Jewels By The Sea has jewelry from dozens of countries as well as La Jolla and San Diego artists. I also have a wide variety of price points ($5.00 - $5,000.) and a variety of styles to appeal to every client (at least that's my goal!)</p>
       </div>
     </div>
 
