--- a/estatevintage.html
+++ b/estatevintage.html
@@ -82,118 +82,22 @@
           <div class="default text">Newest</div>
           <div class="menu">
             <div class="item" data-value="2">Newest</div>
-            <div class="item" data-value="1">Name</div>
-            <div class="item" data-value="0">Price</div>
+            <div class="item" data-value="1">Price Low-to-High</div>
+            <div class="item" data-value="0">Price High-to-Low</div>
           </div>
         </div>
       </div>
   
 
-
       <div class="eleven wide column">
     
-        <div id="productGrid">
-
-          <!-- Row 1 -->
-          <div class="column">
-            <div id="item1" class="ui card">
-              <div class="image">
-                <img src="images/estatevintage/1-thumb.png">
-              </div>
-              <div class="content">
-                <a class="header">ART NOUVEAU STYLE CUFF</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="column">
-            <div id="item2" class="ui card">
-              <div class="image">
-                <img src="images/estatevintage/2-thumb.png">
-              </div>
-              <div class="content">
-                <a class="header">ONYX & MARCASITE RING</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="column">
-            <div id="item3" class="ui card">
-              <div class="image">
-                <img src="images/estatevintage/3-thumb.png">
-              </div>
-              <div class="content">
-                <a class="header">HOBE GOLD-TONE BRACELET</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="column">
-            <div id="item4" class="ui card">
-              <div class="image">
-                <img src="images/estatevintage/4-thumb.png">
-              </div>
-              <div class="content">
-                <a class="header">LAVALIER CHAIN</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="column">
-            <div id="item5" class="ui card">
-              <div class="image">
-                <img src="images/estatevintage/5-thumb.png">
-              </div>
-              <div class="content">
-                <a class="header">SIGNED COPPER NECKLACE</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="column">
-            <div id="item6" class="ui card">
-              <div class="image">
-                <img src="images/estatevintage/6-thumb.png">
-              </div>
-              <div class="content">
-                <a class="header">SAPPHIRE RING</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="column">
-            <div id="item7" class="ui card">
-              <div class="image">
-                <img src="images/estatevintage/7-thumb.png">
-              </div>
-              <div class="content">
-                <a class="header">SHORT NECKLACE</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="column">
-            <div id="item8" class="ui card">
-              <div class="image">
-                <img src="images/estatevintage/8-thumb.png">
-              </div>
-              <div class="content">
-                <a class="header">SILVER EARRINGS</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="column">
-            <div id="item9" class="ui card">
-              <div class="image">
-                <img src="images/estatevintage/9-thumb.png">
-              </div>
-              <div class="content">
-                <a class="header">PAINTED BUTTONS</a>
-              </div>
-            </div>
-          </div>
+        <div class="ui breadcrumb">
+          <a class="section">Products</a>
+          <div class="divider"> / </div>
+          <div class="active section">Estate & Vintage</div>
         </div>
+
+        <div id="productGrid"></div>
 
         <div class="ui centered grid">
           <div class="sixteen wide column">
