Generalized the displayProducts JS

--- a/faq.html
+++ b/faq.html
@@ -108,7 +108,8 @@
         <p>Does Jewels By The Sea do jewelry repair?</p>
       </div>
       <div class="ui secondary segment">
-        <p><b>Yes</b> &mdash; I am personally acquainted with a jewelry repair expert who has been in the business for [BLANK] years.</p>
+        <p><b>Yes</b>, we have excellent jewelry and watch repair. I have used my bench jeweler ( a repair and custom design genius) and my watchmaker for over 30 years (both people were the "go to" guys for the jewelry chain I worked at for 22 years).</p>
+        <p>We repair all kinds of jewelry and watches including Estate pieces. In the modern world, many jewelers say no to estate jewelry repair because of the risks involved, but we say yes, and have returned many family heirloom pieces back into wearable treasures. We also will work on pieces that may not have a lot of intrinsic value, but mean something very special to you.</p>
       </div>
     </div>
 
