--- a/estatevintage.html
+++ b/estatevintage.html
@@ -124,123 +124,7 @@
     </div>
   </div>
 
-<div class="ui modal item1">
-  <i class="close icon"></i>
-  <div class="content">
-    <img class="ui centered image" src="images/estatevintage/1-full.png">
-    <div class="item-desc">
-      <p class="item-title">Sterling Silver Art Nouveau Design Cuff</p>
-      <p class="item-subtitle">Circa 1960.</p>
-      <p class="item-price">$299.00</p>
-      <button class="ui blue button">Inquire</button>
-    </div>
- </div>
-</div>
-
-<div class="ui modal item2">
-  <i class="close icon"></i>
-  <div class="content">
-    <img class="ui centered image" src="images/estatevintage/2-full.png">
-    <div class="item-desc">
-      <p class="item-title">Onyx & Marcasite Ring</p>
-      <p class="item-subtitle">Sterling silver onyx and marcasite ring. Circa 1970</p>
-      <p class="item-price">$299.00</p>
-      <button class="ui blue button">Inquire</button>
-    </div>
- </div>
-</div>
-
-<div class="ui modal item3">
-  <i class="close icon"></i>
-  <div class="content">
-    <img class="ui centered image" src="images/estatevintage/3-full.png">
-    <div class="item-desc">
-      <p class="item-title">'Hobe' Gold-Tone Bracelet</p>
-      <p class="item-subtitle">Signed 'Hobe' gold tone and crystal bracelet Circa 1950.</p>
-      <p class="item-price">$129.00</p>
-      <button class="ui blue button">Inquire</button>
-    </div>
- </div>
-</div>
-
-<div class="ui modal item4">
-  <i class="close icon"></i>
-  <div class="content">
-    <img class="ui centered image" src="images/estatevintage/4-full.png">
-    <div class="item-desc">
-      <p class="item-title">10 Karat Yellow Gold Lavalier Chain</p>
-      <p class="item-subtitle">With seed pearl and synthetic spinel on a gold filled chain. Circa 1920.</p>
-      <p class="item-price">$229.00</p>
-      <button class="ui blue button">Inquire</button>
-    </div>
- </div>
-</div>
-
-<div class="ui modal item5">
-  <i class="close icon"></i>
-  <div class="content">
-    <img class="ui centered image" src="images/estatevintage/5-full.png">
-    <div class="item-desc">
-      <p class="item-title">Signed Renoir of California Copper Necklace</p>
-      <p class="item-subtitle">Circa 1960.</p>
-      <p class="item-price">$129.00</p>
-      <button class="ui blue button">Inquire</button>
-    </div>
- </div>
-</div>
-
-<div class="ui modal item6">
-  <i class="close icon"></i>
-  <div class="content">
-    <img class="ui centered image" src="images/estatevintage/6-full.png">
-    <div class="item-desc">
-      <p class="item-title">18 Karat Yellow Gold Art Deco Sapphire Ring</p>
-      <p class="item-subtitle">Circa 1920.</p>
-      <p class="item-price">$1,119.00</p>
-      <button class="ui blue button">Inquire</button>
-    </div>
- </div>
-</div>
-
-<div class="ui modal item7">
-  <i class="close icon"></i>
-  <div class="content">
-    <img class="ui centered image" src="images/estatevintage/7-full.png">
-    <div class="item-desc">
-      <p class="item-title">Four Strand Adjustable Short Necklace</p>
-      <p class="item-subtitle">Circa 1950.</p>
-      <p class="item-price">$49.00</p>
-      <button class="ui blue button">Inquire</button>
-    </div>
- </div>
-</div>
-
-
-<div class="ui modal item8">
-  <i class="close icon"></i>
-  <div class="content">
-    <img class="ui centered image" src="images/estatevintage/8-full.png">
-    <div class="item-desc">
-      <p class="item-title">Sterling Silver Lapis Earrings</p>
-      <p class="item-subtitle">Circa 1970.</p>
-      <p class="item-price">$39.00</p>
-      <button class="ui blue button">Inquire</button>
-    </div>
- </div>
-</div>
-
-<div class="ui modal item9">
-  <i class="close icon"></i>
-  <div class="content">
-    <img class="ui centered image" src="images/estatevintage/9-full.png">
-    <div class="item-desc">
-      <p class="item-title">Hand Painted Buttons</p>
-      <p class="item-subtitle">Set of 6. Circa 1960.</p>
-      <p class="item-price">$39.00</p>
-      <button class="ui blue button">Inquire</button>
-    </div>
- </div>
-</div>
+<div id="productModals"></div>
 
 <a href="#0" id="toTop"><i class="chevron up icon"></i> <br />Back to Top</a>
 
