Added secondary navigation to menu

--- a/estatevintage.html
+++ b/estatevintage.html
@@ -25,7 +25,6 @@
         .sidebar('attach events', '.ui.sidebar', 'show');
     });
 
-</script>
   </script>
 
 <div class="ui left inverted vertical menu sidebar">
@@ -59,11 +58,6 @@
   <div id="logo">
     <a href="index.html"><img src="images/logo.png" /></a>
   </div>
-  <!--
-  <div id="toggle-view">
-    <i class="list layout icon"></i> VIEW
-  </div>
-  -->
 </header>
 
 
@@ -124,9 +118,20 @@
     </div>
   </div>
 
-<div id="productModals"></div>
-
 <a href="#0" id="toTop"><i class="chevron up icon"></i> <br />Back to Top</a>
+
+<div class="ui modal item1">
+  <i class="close icon"></i>
+  <div class="content">
+    <img class="ui image" src="images/favorites/1-full.png">
+    <div class="item-desc">
+      <p class="item-title">Sterling Silver Art Nouveau Cuff</p>
+      <p class="item-subtitle">Circa 1960</p>
+      <p class="item-price">$299.00</p>
+      <button class="ui blue button">Inquire</button>
+    </div>
+ </div>
+</div>
 
 <ng-include src="'partials/footer.html'"></ng-include>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
