--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div class="ui left inverted vertical menu sidebar">
   <div class="item">
     <div id="hide-sidebar" class="button">
-      <i class="sidebar icon"></i>
+      MENU
     </div>
   </div>
   <a class="active item" href="index.html">
@@ -68,9 +68,26 @@
   <a class="item" href="visit.html">
     Visit Us
   </a>
-  <a class="item" href="index.html#products">
-    Products
-  </a>
+  <div class="ui accordion item">
+    <div class="title">
+      Products
+      <i class="dropdown icon"></i>
+    </div>
+    <div class="content">
+      <a class="item secondary" href="estatevintage.html">Estate & Vintage</a>
+      <a class="item secondary" href="artists.html">Artists</a>
+      <a class="item secondary" href="rings.html">Rings</a>
+      <a class="item secondary" href="earrings.html">Earrings</a>
+      <a class="item secondary" href="favorites.html">Linda's Favorites</a>
+      <a class="item secondary" href="bracelets.html">Bracelets</a>
+      <a class="item secondary" href="scarves.html">Scarves</a>
+      <a class="item secondary" href="necklaces.html">Necklaces & Pendants</a>
+      <a class="item secondary" href="deals.html">Deals</a>
+    </div>
+  </div>
+
+
+
   <a class="item" href="faq.html">
     FAQ
   </a>
@@ -113,10 +130,10 @@
           <div class="column">
             <div class="ui card">
               <a class="image" href="local.html">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/world/5-thumb.png">
               </a>
               <div class="content item-main">
-                <a class="header" href="local.html">Local Artists</a>
+                <a class="header" href="local.html">Artists</a>
               </div>
             </div>
           </div>
@@ -127,7 +144,7 @@
                 <img src="images/favorites/1-thumb.png">
               </a>
               <div class="content item-main">
-                <a class="header" href="worldwide.html">Worldwide Artists</a>
+                <a class="header" href="worldwide.html">Rings</a>
               </div>
             </div>
           </div>
@@ -147,7 +164,7 @@
           <div class="column">
             <div class="ui card">
               <a class="image" href="favorites.html">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/favorites/2-thumb.png">
               </a>
               <div class="content item-main">
                 <a class="header" href="favorites.html">Linda's Favorites</a>
@@ -184,7 +201,7 @@
                 <img src="images/favorites/1-thumb.png">
               </a>
               <div class="content item-main">
-                <a class="header" href="necklaces.html">Necklaces & Pendants</a>
+                <a class="header" href="necklaces.html">Necklaces</a>
               </div>
             </div>
           </div>
