--- a/faq.html
+++ b/faq.html
@@ -83,8 +83,18 @@
     
     <h3 class="script">Frequently Asked Questions</h3>
   
+    <div class="ui list">
+      <a class="item" href="#1">What is the difference between estate, vintage, and antique jewelry?</a>
+      <a class="item" href="#2">Does Jewels By The Sea create custom jewelry?</a>
+      <a class="item" href="#3">Does Jewels By The Sea do jewelry repair?</a>
+      <a class="item" href="#4">What is a Graduate Gemologist?</a>
+      <a class="item" href="#5">Where does your jewelry come from?</a>
+      <a class="item" href="#6">How do I take care of my jewelry?</a>
+    </div>
+
     <div class="ui segments">
       <div class="ui segment">
+        <a id="1"></a> 
         <p>What is the difference between estate, vintage, and antique jewelry?</p>
       </div>
       <div class="ui secondary segment">
@@ -96,6 +106,7 @@
 
     <div class="ui segments">
       <div class="ui segment">
+        <a id="2"></a> 
         <p>Does Jewels By The Sea create custom jewelry?</p>
       </div>
       <div class="ui secondary segment">
@@ -105,6 +116,7 @@
 
     <div class="ui segments">
       <div class="ui segment">
+        <a id="3"></a> 
         <p>Does Jewels By The Sea do jewelry repair?</p>
       </div>
       <div class="ui secondary segment">
@@ -115,6 +127,7 @@
 
     <div class="ui segments">
       <div class="ui segment">
+        <a id="4"></a> 
         <p>What is a Graduate Gemologist?</p>
       </div>
       <div class="ui secondary segment">
@@ -125,11 +138,22 @@
 
     <div class="ui segments">
       <div class="ui segment">
+        <a id="5"></a> 
         <p>Where does your jewelry come from?</p>
       </div>
       <div class="ui secondary segment">
         <p>I hand pick every item in the store. I choose pieces from local artists, from artists from around the world, and from estate and vintage sales. Whenever I travel, I find artists from the area I am visiting and set up appointments to assess the possibility of adding another unique line to my inventory. </p>
         <p>Jewels By The Sea has jewelry from dozens of countries as well as La Jolla and San Diego artists. I also have a wide variety of price points ($5.00 - $5,000.) and a variety of styles to appeal to every client (at least that's my goal!)</p>
+      </div>
+    </div>
+
+    <div class="ui segments">
+      <div class="ui segment">
+        <a id="6"></a> 
+        <p>How do I take care of my jewelry?</p>
+      </div>
+      <div class="ui secondary segment">
+        <p>Answer.</p>
       </div>
     </div>
 
