Restyled mobile navigation

--- a/about.html
+++ b/about.html
@@ -100,13 +100,13 @@
     </div>
 
     <div class="ui basic left aligned segment">
-      <p>Hi! My name is Linda Ronelle Jalving, and the unique boutique "Jewels by the Sea" is a result of my mid-life growth spurt (which started out as a crisis, but has since been amended).</p>
+      <p>Hello! My name is Linda Ronelle Jalving, and <i>Jewels by the Sea</i> is a result of my mid-life growth spurt (which started out as a crisis, but has since been amended).</p>
 
-      <p>My boutique specializes in an eclectic mix of unique jewelry including local artists, estate, vintage, colored gems, diamond, gold, silver, copper and fashion jewelry. You'll also discover scarves, ornaments, and gifts with prices ranging from $5.00 to $5,000.00.</p>
+      <p>My boutique specializes in an eclectic mix of unique jewelry including local artists, estate and vintage, gems, and precious metals. You'll also discover scarves, ornaments, and gifts with prices ranging from $5.00 to $5,000.00.</p>
 
-      <p>I am a Graduate Gemologist with the Gemological Institute of America, and jewelry has been a passion for me since I was a little girl. Every special piece of wearable art in my shop was hand picked with loving care, and I truly enjoy sharing my knowledge and passion for beautiful jewelry of all kinds. I would like to extend a personal invitation for you to visit me at Jewels by the Sea - where I hope to enchant and delight you!</p>
+      <p>I am a Graduate Gemologist with the Gemological Institute of America, and jewelry has been a passion for me since I was a little girl. Every special piece of wearable art in my shop was hand picked with loving care, and I truly enjoy sharing my knowledge and passion for beautiful jewelry of all kinds. I would like to extend a <i>personal</i> invitation for you to visit me at Jewels by the Sea - where I hope to enchant and delight you!</p>
       
-      <p>To learn more about how Jewels By The Sea became a reality for me, please check out a recent interview I did for <a href="http://www.unity.fm/episode/LetsGetNaked_022216">UnityFM</a>.</p>
+      <p>To learn more about how Jewels By The Sea became a reality for me, please check out a <a href="http://www.unity.fm/episode/LetsGetNaked_022216" target="_blank">recent interview</a> I did for UnityFM.</p>
     </div>
   </div>
 
