--- a/faq.html
+++ b/faq.html
@@ -83,6 +83,7 @@
     
     <h3 class="script">Frequently Asked Questions</h3>
   
+    <div class="faq-container">
     <div class="ui list faq-list">
       <a class="item" href="#1" target="_self">What is the difference between estate, vintage, and antique jewelry?</a>
       <a class="item" href="#2" target="_self">Does Jewels By The Sea create custom jewelry?</a>
@@ -214,7 +215,7 @@
         </div>
       </div>
     </div>
-
+    </div>
   </div>
 
   <ng-include src="'partials/footer.html'"></ng-include>
