--- a/index.html
+++ b/index.html
@@ -54,24 +54,19 @@
   </script>
 
 <div class="ui left inverted vertical menu sidebar">
-  <div class="item">
-    <div id="hide-sidebar" class="button">
-      MENU
-    </div>
-  </div>
-  <a class="active item" href="index.html">
-    Home
+  <a class="active menu-item first-item" href="index.html">
+    Menu
   </a>
-  <a class="item" href="about.html">
+  <a class="menu-item" href="about.html">
     About
   </a>
-  <a class="item" href="visit.html">
+  <a class="menu-item" href="visit.html">
     Visit Us
   </a>
-  <div class="ui accordion item">
+  <div class="ui vertical fluid accordion menu-item">
     <div class="title">
       Products
-      <i class="dropdown icon"></i>
+      <i class="dropdown icon" style="float:right"></i>
     </div>
     <div class="content">
       <a class="item secondary" href="estatevintage.html">Estate & Vintage</a>
@@ -86,9 +81,7 @@
     </div>
   </div>
 
-
-
-  <a class="item" href="faq.html">
+  <a class="menu-item" href="faq.html">
     FAQ
   </a>
 </div>
@@ -114,7 +107,7 @@
 
         <div id="productGrid">
           <!-- Row 1 -->
-          <div class="column">
+          <div class="column product-item">
 
             <div class="ui card">
               <a class="image" href="estatevintage.html">
@@ -127,7 +120,7 @@
 
           </div>
 
-          <div class="column">
+          <div class="column product-item">
             <div class="ui card">
               <a class="image" href="local.html">
                 <img src="images/world/5-thumb.png">
@@ -138,7 +131,7 @@
             </div>
           </div>
 
-          <div class="column">
+          <div class="column product-item">
             <div class="ui card">
               <a class="image" href="worldwide.html">
                 <img src="images/favorites/1-thumb.png">
@@ -149,7 +142,7 @@
             </div>
           </div>
 
-          <div class="column">
+          <div class="column product-item">
             <div class="ui card">
               <a class="image" href="earrings.html">
                 <img src="images/favorites/1-thumb.png">
@@ -161,7 +154,7 @@
           </div>
 
           <!-- Row 2 -->
-          <div class="column">
+          <div class="column product-item">
             <div class="ui card">
               <a class="image" href="favorites.html">
                 <img src="images/favorites/2-thumb.png">
@@ -172,7 +165,7 @@
             </div>
           </div>
 
-          <div class="column">
+          <div class="column product-item">
             <div class="ui card">
               <a class="image" href="bracelets.html">
                 <img src="images/favorites/1-thumb.png">
@@ -184,7 +177,7 @@
           </div>
 
           <!-- Row 3 -->
-          <div class="column">
+          <div class="column product-item">
             <div class="ui card">
               <a class="image" href="scarves.html">
                 <img src="images/favorites/1-thumb.png">
@@ -195,7 +188,7 @@
             </div>
           </div>
 
-          <div class="column">
+          <div class="column product-item">
             <div class="ui card">
               <a class="image" href="necklaces.html">
                 <img src="images/favorites/1-thumb.png">
@@ -206,7 +199,7 @@
             </div>
           </div>
 
-          <div class="column">
+          <div class="column product-item">
             <div class="ui card">
               <a class="ui image" href-"deals.html">
                 <img src="images/favorites/1-thumb.png">
@@ -236,7 +229,7 @@
         </div>
 
         <div class="ui basic center aligned segment">
-          <a href="about.html">Graduate gemologist</a>, expert <a href="faq.html">jewelry repair</a>, exceptional customer service.
+          <a href="about.html">Graduate gemologist</a>, expert <a href="faq.html#3">jewelry repair</a>, exceptional customer service.
         </div>
 
         <div class="ui basic center aligned segment">
