Styling of accent colors; changed mail icon to envelope

--- a/about.html
+++ b/about.html
@@ -95,6 +95,8 @@
   <!-- Main Content -->
   <div class="ui main container">
     
+    <h3 class="script">About Me</h3>
+
     <div class="ui basic segment">
       <img class="ui image center aligned" src="images/about.jpg" />
     </div>
