--- a/faq.html
+++ b/faq.html
@@ -132,8 +132,9 @@
         <p>What is a Graduate Gemologist?</p>
       </div>
       <div class="ui secondary segment">
-        <p>GIA, or the <a href="http://www.gia.edu/">Gemological Institute of America</a>, is <i>the</i> training authority in the American jewelry industry. To earn a Graduate Gemologist degree from the GIA, you must invest a substantial amount of work to complete and pass five course studies and three lab classes, and then pass a comprehensive final exam.</p>
-        <p>There are 8 requirements of study, including Diamonds and Diamond Grading, Colored Stone Essentials, Gem Identification, and various grading and identification labs. The most prestigious credential in the industry, the GIA Graduate Gemologist program gives a person the compregensive knowledge of diamonds and colored stones one needs to succeed anywhere in the industry.</p>
+        <p>GIA, or the <a href="http://www.gia.edu/">Gemological Institute of America</a>, is <i>the</i> training authority in the American jewelry industry. The most prestigious credential in the industry, the GIA Graduate Gemologist program gives a person the comprehensive knowledge of diamonds and colored stones you need to succeed anywhere in the jewelry industry.</p>
+        <p>To earn a Graduate Gemologist degree from the GIA, you must invest a substantial amount of work to complete five course studies and three lab classes, as well as a comprehensive final exam.</p>
+        <p>There are 8 requirements of study, including Diamonds and Diamond Grading, Colored Stone Essentials, Gem Identification, and various grading and identification labs. </p>
       </div>
     </div>
 
@@ -143,8 +144,8 @@
         <p>Where does your jewelry come from?</p>
       </div>
       <div class="ui secondary segment">
-        <p>I hand pick every item in the store. I choose pieces from local artists, from artists from around the world, and from estate and vintage sales. Whenever I travel, I find artists from the area I am visiting and set up appointments to assess the possibility of adding another unique line to my inventory. </p>
-        <p>Jewels By The Sea has jewelry from dozens of countries as well as La Jolla and San Diego artists. I also have a wide variety of price points ($5.00 - $5,000.) and a variety of styles to appeal to every client (at least that's my goal!)</p>
+        <p>I hand pick every item in the store; Jewels By The Sea has jewelry from dozens of countries as well as La Jolla and San Diego artists. I also pick jewelry from estate and vintage sales. Whenever I travel, I find artists from the area I'm visiting and set up appointments to assess the possibility of adding another unique line to my inventory. </p>
+        <p>I also have a wide variety of price points ($5 - $5,000) and a variety of styles to appeal to every client (at least, that's my goal!)</p>
       </div>
     </div>
 
@@ -159,7 +160,7 @@
           <div class="item">
             <i class="diamond icon"></i>
             <div class="content">
-              <div class="description"><b>Avoid buildup</b>. Visit your jewelry at least once a year to have your fine jewelry professionally cleaned and inspected for worn or cracked prongs, faulty clasps, or other potential problems.</div>
+              <div class="description"><b>Avoid buildup</b>. Visit your jewelry at least once a year to have your fine jewelry professionally cleaned and inspected for potential problems.</div>
             </div>
           </div>
           
@@ -201,7 +202,7 @@
           <div class="item">
             <i class="diamond icon"></i>
             <div class="content">
-              <div class="description">When not wearing your jewelry, place each item in a separate, soft, compact container. If cluttered together, jewelry can become scratched &mdash; even diamonds.</div>
+              <div class="description">When storing your jewelry, place each item in a separate, soft, compact container. If cluttered together, jewelry can become scratched &mdash; even diamonds.</div>
             </div>
           </div>
 
