--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </div>
 
         <div class="ui basic center aligned segment">
-            <a href="http://www.yelp.com/biz/jewels-by-the-sea-la-jolla"><i class="fa fa-yelp fa-5x"></i></a> &nbsp;<a href=""><i class="fa fa-facebook-square fa-5x"></i></a> &nbsp;<a href="mailto:linda@jewelsbythesea.biz"><i class="fa fa-send fa-5x"></i></a>
+            <a href="http://www.yelp.com/biz/jewels-by-the-sea-la-jolla"><i class="fa fa-yelp fa-5x"></i></a> &nbsp;<a href=""><i class="fa fa-facebook-square fa-5x"></i></a> &nbsp;<a href="mailto:linda@jewelsbythesea.biz"><i class="fa fa-envelope-o fa-5x"></i></a>
         </div>
       </div>
     </div>
