--- a/visit.html
+++ b/visit.html
@@ -87,7 +87,7 @@
       <div class="ten wide column">
         <h3 class="script">Hours & Location</h3>
 
-        <div class="ui two column grid">
+        <div class="ui two column grid store-hours">
           <div class="column right aligned bold-text">
             <p>MONDAY</p>
             <p>TUESDAY</p>
@@ -103,7 +103,7 @@
         </div>
 
         <div class="ui basic segment center aligned">
-          <p>I am in the store later than 6pm on most nights, and I am happy to set up an appointment with you at any mutually agreeable time - just give call!</p>
+          <p>I am in the store later than 6pm on most nights, and I am happy to set up an appointment with you at any mutually agreeable time - just <a href="tel:8584595166">give a call!</a></p>
         </div>
       </div>
 
